--- a/src/Components/Header/Weather/weather.module.scss
+++ b/src/Components/Header/Weather/weather.module.scss
@@ -1,5 +1,13 @@
 .container{
   display: flex;
   align-items: center;
-  gap: 0 20px;
+  gap: 0 10px;
+}
+.weather{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 5px 0;
+  color: white;
+  font-weight: 700;
 }
