--- a/src/Components/MainBlock/GeneralNews/generalNews.module.scss
+++ b/src/Components/MainBlock/GeneralNews/generalNews.module.scss
@@ -1,22 +1,18 @@
-.container {
+.container{
+  max-width: 320px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  gap: 10px 0;
-  margin-bottom: 20px;
+  gap: 5px 0;
 }
-
-.image {
+.imageBlock{
   display: flex;
   flex-direction: column;
   gap: 10px 0;
-
-  img {
-    max-width: 666px;
+  img{
+    border-radius: 10px;
   }
 }
-
-.imageTitle {
+.imageTitle{
   font-size: 14px;
   color: #428EE8;
   cursor: pointer;
@@ -25,11 +21,9 @@
     color: #1A4480;
   }
 }
-
-.title {
-  font-size: 28px;
+.title{
+  font-size: 20px;
   color: #9BA0A6;
-  line-height: 32px;
   font-weight: 600;
   margin-bottom: 10px;
   cursor: pointer;
@@ -37,17 +31,11 @@
     color: #1A4480;
   }
 }
-
-.textItem {
-  font-size: 18px;
-  margin-bottom: 10px;
-  cursor: pointer;
-}
 .statistics{
   display: flex;
   gap: 0 10px;
 }
-.statisticsItem{
+.statisticBlock{
   display: flex;
   gap: 0 10px;
   align-items: center;
