--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -2,7 +2,8 @@
   display: flex;
   width: 1400px;
   margin: 0 auto;
-  justify-content: space-between;
   padding-top: 20px;
   align-items: flex-start;
+  gap: 0 50px;
+  justify-content: space-around;
 }
