--- a/src/Components/RightBlock/RightBlock.module.scss
+++ b/src/Components/RightBlock/RightBlock.module.scss
@@ -1,6 +1,8 @@
 .container{
-  width: 250px;
+  width: 300px;
   display: flex;
+  flex-direction: column;
+  gap: 30px 0;
   img{
     height: 400px;
   }
